// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getButtonAttributes() should return correct css for isSelected: false and isDisabled: false 1`] = `
Object {
  "aria-selected": "false",
  "disabled": false,
  "role": "tab",
  "tabIndex": -1,
}
`;

exports[`getButtonAttributes() should return correct css for isSelected: false and isDisabled: true 1`] = `
Object {
  "aria-selected": "false",
  "disabled": true,
  "role": "tab",
  "tabIndex": -1,
}
`;

exports[`getButtonAttributes() should return correct css for isSelected: true and isDisabled: false 1`] = `
Object {
  "aria-selected": "true",
  "disabled": false,
  "role": "tab",
  "tabIndex": 0,
}
`;

exports[`getButtonAttributes() should return correct css for isSelected: true and isDisabled: true 1`] = `
Object {
  "aria-selected": "true",
  "disabled": true,
  "role": "tab",
  "tabIndex": 0,
}
`;
